--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,31 @@
 cmake_minimum_required(VERSION 3.7)
 project(OpenGLSetup)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES main.cpp GLAD/src/glad.c)
 set(HEADER_FILES shader.h)
 
-set(dir ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${dir}/build)
-
 include_directories(include)
-
-#Include library files
 include_directories(GLAD/include)
 include_directories(glm/include)
 
-file(COPY resources DESTINATION ${dir}/build)
-file(COPY shaders DESTINATION ${dir}/build)
-
-
-#Add deps
 add_subdirectory(dependencies)
 
 add_executable(OpenGLSetup ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(OpenGLSetup glfw)
+
+# Put the exe in build/<CONFIG> (Debug/Release)
+set_target_properties(OpenGLSetup PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/$<CONFIG>"
+)
+
+# Copy assets next to the exe after build
+add_custom_command(TARGET OpenGLSetup POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/resources"
+        "$<TARGET_FILE_DIR:OpenGLSetup>/resources"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "${CMAKE_CURRENT_SOURCE_DIR}/shaders"
+        "$<TARGET_FILE_DIR:OpenGLSetup>/shaders"
+)
