increased fps by making many functions const and reducing use of the return_board_buffer_index

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.7)
 project(OpenGLSetup)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 set(SOURCE_FILES main.cpp GLAD/src/glad.c
         "classes and helper functions/GameBoard.cpp"
