updated cmake for new file locations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,27 +5,29 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
-set(SOURCE_FILES main.cpp GLAD/src/glad.c
-        "src/GameBoard.cpp"
-        "src/GameBoard.h")
-set(HEADER_FILES shader.h
-        "src/FPSCounter.cpp"
-        "src/FPSCounter.h"
-        "src/GlfwSetup.cpp"
-        "src/GlfwSetup.h"
-        "src/GameBoard.h")
+set(SOURCE_FILES src/main.cpp GLAD/src/glad.c
+        "src/core/GameBoard.cpp"
+        "src/core/GameBoard.h")
+set(HEADER_FILES src/shader.h
+        "src/core/FPSCounter.cpp"
+        "src/core/FPSCounter.h"
+        "src/core/GlfwSetup.cpp"
+        "src/core/GlfwSetup.h"
+        "src/core/GameBoard.h"
+        src/main.cpp)
 
 include_directories(include)
 include_directories(GLAD/include)
 include_directories(glm/include)
+#include_directories(imgui)
 include_directories(classes and helper functions)
 
 add_subdirectory(dependencies)
 
 add_executable(OpenGLSetup ${SOURCE_FILES} ${HEADER_FILES}
-        "src/GameBoard.cpp"
-        "src/GameBoard.h")
-target_link_libraries(OpenGLSetup glfw)
+        "src/core/GameBoard.cpp"
+        "src/core/GameBoard.h")
+target_link_libraries(OpenGLSetup glfw )
 
 # Put the exe in build/<CONFIG> (Debug/Release)
 set_target_properties(OpenGLSetup PROPERTIES
