Reorganizing dependencies and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,18 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.31.6)
 project(OpenGLSetup)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
-set(SOURCE_FILES src/main.cpp GLAD/src/glad.c
-        "src/core/GameBoard.cpp"
-        "src/core/GameBoard.h")
-set(HEADER_FILES src/shader.h
-        "src/core/FPSCounter.cpp"
-        "src/core/FPSCounter.h"
-        "src/core/GlfwSetup.cpp"
-        "src/core/GlfwSetup.h"
-        "src/core/GameBoard.h"
-        src/main.cpp)
+add_subdirectory(lib)
 
-include_directories(include)
-include_directories(GLAD/include)
-include_directories(glm/include)
-#include_directories(imgui)
-include_directories(classes and helper functions)
+file(GLOB_RECURSE SOURCES
+        "src/*.cpp"
+        "src/*.h"
+)
 
-add_subdirectory(dependencies)
-
-add_executable(OpenGLSetup ${SOURCE_FILES} ${HEADER_FILES}
-        "src/core/GameBoard.cpp"
-        "src/core/GameBoard.h")
-target_link_libraries(OpenGLSetup glfw )
+add_executable(OpenGLSetup ${SOURCES})
 
 # Put the exe in build/<CONFIG> (Debug/Release)
 set_target_properties(OpenGLSetup PROPERTIES
@@ -39,7 +24,6 @@ add_custom_command(TARGET OpenGLSetup POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${CMAKE_CURRENT_SOURCE_DIR}/resources"
         "$<TARGET_FILE_DIR:OpenGLSetup>/resources"
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "${CMAKE_CURRENT_SOURCE_DIR}/shaders"
-        "$<TARGET_FILE_DIR:OpenGLSetup>/shaders"
 )
+
+target_link_libraries(OpenGLSetup PRIVATE glad glfw glm::glm imgui_lib)
